--- a/week01/styles/media-query.css
+++ b/week01/styles/media-query.css
@@ -15,3 +15,8 @@ main {
     grid-template-columns: 1fr;
     grid-gap: 1rem;
 }
+
+section {
+    padding: 1rem;
+    background-color: #ffffff;
+}
