--- a/styles/base.css
+++ b/styles/base.css
@@ -20,18 +20,35 @@ header {
     padding: 1rem;
 }
 
+nav {
+    background-color:rgb(54, 118, 97);
+    margin: 0 auto;
+    max-width: 800px;
+    width: 100%;
+}
+
 nav ul {
     list-style-type: none;
     padding: 0;
+    margin: 0;
+    text-align: center;
 }
 
 nav ul li {
+    display: inline-block;
     margin: 0.5rem 0;
 }
 
 nav ul li a {
+    display: block;
     color: #fff;
+    text-align: center;
+    padding: 1rem;
     text-decoration: none;
+}
+
+.active {
+    color: beige;
 }
 
 main {
@@ -46,6 +63,8 @@ main {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 1rem;
     margin-bottom: 1rem;
+    grid-template-columns: 1fr;
+    grid-gap: 1rem;
 }
 
 h1{
