--- a/styles/base.css
+++ b/styles/base.css
@@ -18,13 +18,24 @@ header {
     background-color: #333;
     color: #fff;
     padding: 1rem;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header img {
+    margin-right: .5rem;
+}
+
+header h1 {
+    margin: 0;
 }
 
 nav {
     background-color:rgb(54, 118, 97);
-    margin: 0 auto;
-    max-width: 800px;
     width: 100%;
+    margin: 0 auto;
 }
 
 nav ul {
@@ -32,11 +43,12 @@ nav ul {
     padding: 0;
     margin: 0;
     text-align: center;
+    display: flex;
+    flex-direction: column;
 }
 
 nav ul li {
-    display: inline-block;
-    margin: 0.5rem 0;
+    margin: 0.5rem;
 }
 
 nav ul li a {
@@ -47,14 +59,17 @@ nav ul li a {
     text-decoration: none;
 }
 
-.active {
-    color: beige;
+.active a {
+    background-color: rgb(68, 147, 121);
 }
 
 main {
-    max-width: 600px;
+    max-width: 1000px;
     margin: 0 auto;
     padding: 1rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1rem;
 }
 
 .card {
@@ -62,15 +77,14 @@ main {
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 1rem;
-    margin-bottom: 1rem;
-    grid-template-columns: 1fr;
-    grid-gap: 1rem;
+    margin-top: 1rem;
 }
 
 h1{
     padding: 1rem;
     color: #fff;
-    background-color: rgb(65, 65, 65)
+    background-color: #333;
+    text-align: center;
 }
 
 h2 {
@@ -82,12 +96,17 @@ h2 {
 
 h3 {
     padding: .5rem;
-
+    margin-top: 1rem;
 }
 
-ul {
+section ul {
     list-style-type: none;
-    padding: 0;
+    padding: .5rem;
+    margin-top: 1rem;
+}
+
+section ul li {
+    padding: .25rem;
 }
 
 footer {
