--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,22 +1,20 @@
 @media only screen and (min-width: 48rem) {
-    
-    /*
-    .parent {
-        display: grid;
-        grid-template-columns: 2fr 1fr;
-        column-gap: 10px
-    }
-    */
-    
     header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+        justify-content: center;
+    }
+    
+    header img {
+        margin-right: 1rem;
+        margin-bottom: 0;
+    }
+
+    header h1 {
+        margin: 0;
     }
 
     nav ul {
-        display: flex;
         flex-direction: row;
+        justify-content: center;
     }
 
     nav ul li {
@@ -24,12 +22,31 @@
     }
 
     main {
+        max-width: 1000px;
+        margin: 0 auto;
+        padding: 1rem;
         display: grid;
         grid-template-columns: 2fr 1fr;
         gap: 1rem;
     }
 
-    .card:nth-child(1) {
-        grid-column: span 2;
+    main h1 {
+        grid-column: span 1;
+        margin-bottom: 0;
+    }
+
+    .card {
+        border-radius: 8px;
+        padding: 1rem;
+        margin: 0;
+    }
+
+    .card > ul {
+        padding: 1rem 0;
+    }
+
+    .weather, .page.visits {
+        flex: 1;
+        margin: 0.5rem;
     }
 }
