my best attempt design.html, design.css

--- a/week02/styles/design.css
+++ b/week02/styles/design.css
@@ -24,7 +24,8 @@ main {
 
 h2 {
 	color: navy;
-	text-align: center;
+	text-align: left;
+    grid-template-columns: 1fr 1fr;
 }
 
 article p {
@@ -32,13 +33,14 @@ article p {
 }
 
 .callout {
-	color: #777;
+	color: #fff;
 	background-color: #702963;
+    padding: 1rem;
 }
 
 footer {
 	margin-top: 1rem;
 	border-top: 1px solid rgba(0, 0, 0, 0.1);
 	font-size: smaller;
-	text-align: right;
+	text-align: left;
 }
