--- a/week02/styles/design.css
+++ b/week02/styles/design.css
@@ -1,5 +1,12 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+
 body {
 	font-family: Roboto, helvetica, sans-serif;
+    margin: 1rem;
 }
 
 header,
@@ -9,23 +16,37 @@ footer {
 	margin: 0 auto;
 }
 
-marquee {
-	padding: 1rem;
-	background-color: #eee;
+div.banner {
+	border: 1px solid #bbb;
+    padding: 1rem;
+    background-color: rgb(230, 243, 254);
+    font-weight: 700;
+	word-break: break-word;
+	text-align: center;
 }
 
 h1 {
 	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    margin: 1rem 0;
 }
 
 main {
 	display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 1.5rem;
+}
+
+section {
+    padding: 1rem;
 }
 
 h2 {
 	color: navy;
-	text-align: left;
-    grid-template-columns: 1fr 1fr;
+	grid-column: 1/3;
+}
+
+h3 {
+    margin-bottom: .5rem;
 }
 
 article p {
@@ -33,14 +54,17 @@ article p {
 }
 
 .callout {
-	color: #fff;
+	border:1px solid rgba(0, 0, 0, 0.1);
+    color: #fff;
 	background-color: #702963;
+    grid-column: 1/3;
     padding: 1rem;
 }
 
 footer {
 	margin-top: 1rem;
 	border-top: 1px solid rgba(0, 0, 0, 0.1);
-	font-size: smaller;
+	padding: .5rem 0;
+    font-size: smaller;
 	text-align: left;
 }
