--- a/styles/base.css
+++ b/styles/base.css
@@ -36,9 +36,24 @@ nav {
     margin: 0 auto;
 }
 
+#myButton::before {
+    content: "";
+}
+
+#myButton {
+    font-size: 2rem;
+    background: none;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    width: 100%;
+    text-align: right;
+    padding: .25rem 2vw;
+}
+
 nav ul {
     list-style-type: none;
-    padding: 0;
+    padding: .75rem 2vw;
     margin: 0;
     text-align: center;
     display: flex;
@@ -59,6 +74,19 @@ nav ul li a {
 
 .active a {
     background-color: #3d836d;
+}
+
+ul.menuLinks {
+    display: none;
+    list-style-type: none;
+}
+
+#myButton.open::before {
+    content: "x";
+}
+
+ul.menuLinks.open {
+    display: block;
 }
 
 main {
