change hambutton from left to right

--- a/styles/base.css
+++ b/styles/base.css
@@ -47,7 +47,7 @@ nav {
     color: #fff;
     cursor: pointer;
     width: 100%;
-    text-align: right;
+    text-align: left;
     padding: .25rem 2vw;
 }
 
