--- a/styles/base.css
+++ b/styles/base.css
@@ -96,6 +96,7 @@ main {
     display: grid;
     grid-template-columns: 1fr;
     gap: 1rem;
+    align-items: center;
 }
 
 .card {
@@ -111,6 +112,7 @@ h1{
     color: #fff;
     background-color: #333;
     text-align: center;
+    grid-column: 1/3;
 }
 
 h2 {
