--- a/styles/base.css
+++ b/styles/base.css
@@ -16,18 +16,17 @@ header {
     background-color: #333;
     color: #fff;
     padding: 1rem;
-    text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-header img {
-    margin-right: .5rem;
+header h1 {
+    padding: 2rem;
 }
 
-header h1 {
-    margin: 0;
+header img {
+    height: auto;
 }
 
 nav {
@@ -48,7 +47,7 @@ nav {
     cursor: pointer;
     width: 100%;
     text-align: left;
-    padding: .25rem 2vw;
+    padding: .5rem 2vw;
 }
 
 nav ul {
@@ -67,7 +66,6 @@ nav ul li {
 nav ul li a {
     display: block;
     color: #fff;
-    text-align: center;
     padding: 1rem;
     text-decoration: none;
 }
@@ -96,7 +94,7 @@ main {
     display: grid;
     grid-template-columns: 1fr;
     gap: 1rem;
-    align-items: center;
+    align-items: start;
 }
 
 .card {
@@ -112,7 +110,6 @@ h1 {
     color: #fff;
     background-color: #333;
     text-align: center;
-    grid-column: 1/3;
 }
 
 h2 {
@@ -135,6 +132,29 @@ section ul {
 
 section ul li {
     padding: .25rem;
+}
+
+.hero {
+    position: relative;
+}
+
+.hero img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.hero span {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 600;
+    font-size: 1.15rem;
+    position: absolute;
+    bottom: 5%;
+    left: 10%;
+    right: 10%;
+    background-color: rgba(255, 255, 255, 0.5);
+    padding: 1rem;
+    text-align: center;
 }
 
 footer {
