--- a/styles/larger.css
+++ b/styles/larger.css
@@ -2,19 +2,9 @@
     header {
         justify-content: center;
     }
-    
-    header img {
-        margin-right: 1rem;
-        margin-bottom: 0;
-    }
 
     header h1 {
         margin: 0;
-    }
-
-    nav ul {
-        flex-direction: row;
-        justify-content: center;
     }
 
     nav ul li {
@@ -31,22 +21,23 @@
     }
 
     main h1 {
-        grid-column: span 1;
-        margin-bottom: 0;
+        grid-column: 1 / -1;
     }
 
     .card {
-        border-radius: 8px;
         padding: 1rem;
         margin: 0;
-    }
-
-    .card > ul {
-        padding: 1rem 0;
-    }
-
-    .weather, .page.visits {
         flex: 1;
-        margin: 0.5rem;
+        display: flex;
+        flex-direction: column;
     }
+
+    .hero {
+        grid-column: 1 / -1;
+    }
+
+    .hero span {
+        font-size: 1.5rem;
+    }
+
 }
