image work and main width

--- a/styles/larger.css
+++ b/styles/larger.css
@@ -12,12 +12,12 @@
     }
 
     main {
-        max-width: 1000px;
         margin: 0 auto;
         padding: 1rem;
         display: grid;
         grid-template-columns: 2fr 1fr;
         gap: 1rem;
+        width: 90%;
     }
 
     main h1 {
