--- a/styles/base.css
+++ b/styles/base.css
@@ -6,10 +6,14 @@
 
 body {
     font-family: 'Roboto', sans-serif;
+    color: #333;
+    background-color: #eee;
+}
+
+html, body {
     margin: 0;
     padding: 0;
-    color: #333;
-    background-color: #f4f4f9;
+    width: 100%;
 }
 
 header {
@@ -88,13 +92,13 @@ ul.menuLinks.open {
 }
 
 main {
-    max-width: 1000px;
     margin: 0 auto;
     padding: 1rem;
     display: grid;
     grid-template-columns: 1fr;
     gap: 1rem;
     align-items: start;
+    width: 95%;
 }
 
 .card {
@@ -135,6 +139,9 @@ section ul li {
 }
 
 .hero {
+    width: 100%;
+    margin: 0;
+    padding: 0;
     position: relative;
 }
 
