--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -67,6 +67,25 @@ ul.menulinks.open {
     display: block;
 }
 
+#myButton::before {
+    content: "";
+}
+
+#myButton.open::before {
+    content: "x";
+}
+
+#myButton {
+    font-size: 2rem;
+    background: none;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    width: 100%;
+    text-align: left;
+    padding: .5rem 2vw;
+}
+
 main {
     margin: 0 auto;
     padding: 1rem;
@@ -114,6 +133,11 @@ section ul li {
     padding: .25rem;
 }
 
+section p {
+    padding: .5rem;
+    margin-top: 1rem;
+}
+
 .hero {
     width: 100%;
     margin: 0;
@@ -133,7 +157,7 @@ section ul li {
     font-size: 1.15rem;
     position: absolute;
     bottom: 5%;
-    left: 10%;
+    left: 5%;
     color: #fff;
     background-color: rgba(255, 255, 255, 0.5);
     padding: 1rem;
