--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+/* Index, Discover page css */
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
@@ -104,6 +105,36 @@ main {
     margin-top: 1rem;
 }
 
+
+/* Discover only css */
+.discover {
+    margin: 0 auto;
+    padding: 1rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1rem;
+    align-items: start;
+    width: 95%;
+}
+
+.card2 {
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 1rem;
+    margin-top: 1rem;
+}
+
+.sidebar {
+    order: 1;
+}
+
+.image {
+    order: 2;
+}
+
+
+/* Index, discover page css */
 h1 {
     padding: 1rem;
     color: #fff;
@@ -138,6 +169,8 @@ section p {
     margin-top: 1rem;
 }
 
+
+/* Index only css-.hero */
 .hero {
     width: 100%;
     margin: 0;
