--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -1,4 +1,6 @@
 @media only screen and (min-width: 48rem) {
+    
+    /* Index, discover css */
     header {
         justify-content: center;
     }
@@ -20,6 +22,19 @@
         width: 90%;
     }
 
+
+    /* Discover only css */
+    .discover {
+        margin: 0 auto;
+        padding: 1rem;
+        display: grid;
+        grid-template-columns: 1fr 2fr; /* change back to 1fr 2fr */
+        gap: 1rem;
+        width: 90%;
+    }
+
+
+    /* Index, discover css */
     main h1 {
         grid-column: 1 / -1;
     }
@@ -32,6 +47,31 @@
         flex-direction: column;
     }
 
+
+    /* discover only css */
+    .card2 {
+        padding: 1rem;
+        margin: 0;
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .sidebar:nth-of-type(1) { grid-row: 1; grid-column: 1; }
+    .image:nth-of-type(2) { grid-row: 1; grid-column: 2; }
+    .sidebar:nth-of-type(3) { grid-row: 2; grid-column: 1; }
+    .image:nth-of-type(4) { grid-row: 2; grid-column: 2; }
+    .sidebar:nth-of-type(5) { grid-row: 3; grid-column: 1; }
+    .image:nth-of-type(6) { grid-row: 3; grid-column: 2; }
+    .sidebar:nth-of-type(7) { grid-row: 4; grid-column: 1; }
+    .image:nth-of-type(8) { grid-row: 4; grid-column: 2; }
+    .sidebar:nth-of-type(9) { grid-row: 5; grid-column: 1; }
+    .image:nth-of-type(10) { grid-row: 5; grid-column: 2; }
+    .sidebar:nth-of-type(11) { grid-row: 6; grid-column: 1; }
+    .image:nth-of-type(12) { grid-row: 6; grid-column: 2; }
+
+
+    /* Index only css (hero) */
     .hero {
         grid-column: 1 / -1;
     }
