link to index page

--- a/week04/form-start/css/small.css
+++ b/week04/form-start/css/small.css
@@ -65,7 +65,7 @@ main {
 .wf1 label {
     display: block;
     padding-top: 1rem;
-    color: #9c2c13;
+    color: rgb(29, 47, 122);
     font-size: .9rem;
 }
 
