--- a/week04/form-start/css/small.css
+++ b/week04/form-start/css/small.css
@@ -47,6 +47,7 @@ nav ul li.active a {
 main {
     padding: 0 2%;
     min-height: 20rem;
+    margin-bottom: 2rem;
 }
 
 /*----------- FORM STYLING --------------*/
@@ -106,7 +107,7 @@ main {
     padding: .8rem;
     width: 96%;
     max-width: 400px;
-    margin: -1rem 2% -2rem 2%;
+    margin: 1rem 2% 0 2%;
     box-shadow: 1px 1px 4px #999;
 }
 
