--- a/styles/form.css
+++ b/styles/form.css
@@ -54,9 +54,8 @@ main {
 
 .wf1 input[type="text"],
 .wf1 input[type="password"],
-.wf1 input[type="email"], 
-.wf1 select
-{
+.wf1 input[type="email"],
+.wf1 select {
     background-color: var(--back3);
     display: block;
     border: solid 1px var(--border2);
