--- a/styles/form.css
+++ b/styles/form.css
@@ -31,6 +31,8 @@ main {
     border: 1px solid var(--border);
     border-radius: 6px;
     padding: .5rem;
+    width: 100%;
+    max-width: 700px;
 }
 
 .wf1 legend {
@@ -44,12 +46,15 @@ main {
     padding-top: 1rem;
     color: var(--font);
     font-size: 1rem;
+    padding: .5rem;
 }
 
 .wf1 div {
     padding-top: 1rem;
     color: var(--font);
     font-size: 1rem;
+    padding: .5rem;
+    margin-left: 1rem;
 }
 
 .wf1 input[type="text"],
@@ -63,7 +68,25 @@ main {
     padding: .75rem;
     color: var(--font);
     width: 100%;
+    max-width: 500px;
+}
+
+.wf1 input[type="range"]{
+    margin-left: 1rem;
+    width: 100%;
+    max-width: 500px;
+}
+
+.wf1 input[type="submit"]{
+    border: none;
+    background-image: linear-gradient(var(--back2), #255244);
+    color: #fff;
+    border-radius: 6px;
+    padding: .8rem;
+    width: 96%;
     max-width: 400px;
+    margin: 1rem 2% 0 2%;
+    box-shadow: 1px 1px 4px #999;
 }
 
 .wf1 input:required {
@@ -71,5 +94,5 @@ main {
 }
 
 .wf1 input:required:valid {
-    border-left: solid 6px rgb(31, 153, 57);
+    border-left: solid 6px rgb(50, 211, 85);
 }
