edits to page for hambutton

--- a/styles/base.css
+++ b/styles/base.css
@@ -72,15 +72,8 @@ ul.menuLinks.open {
     display: block;
 }
 
-#myButton::before {
-    content: "";
-}
-
-#myButton.open::before {
-    content: "x";
-}
-
 #myButton {
+    display: block;
     font-size: 2rem;
     background: none;
     border: none;
@@ -89,6 +82,10 @@ ul.menuLinks.open {
     width: 100%;
     text-align: left;
     padding: .5rem 2vw;
+}
+
+#myButton.open::before {
+    content: "";
 }
 
 main {
