finish all html and js for form.

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -198,6 +198,11 @@ section p {
     text-align: center;
 }
 
+
+
+/* Join only css */
+
+
 footer {
     background-color: #646F58;
     color: #fff;
