--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -1,5 +1,5 @@
 @media only screen and (min-width: 48rem) {
-    
+
     /* Index, discover css */
     header {
         justify-content: center;
@@ -40,7 +40,7 @@
     /* Join only css */
     .benefits {
         display: block;
-    }   
+    }
 
 
     /* Discover only css */
@@ -77,20 +77,69 @@
         flex-direction: column;
     }
 
-    .sidebar:nth-of-type(1) {grid-row: 1; grid-column: 1;}
-    .image:nth-of-type(2) {grid-row: 1; grid-column: 2;}
-    .sidebar:nth-of-type(3) {grid-row: 2; grid-column: 1;}
-    .image:nth-of-type(4) {grid-row: 2; grid-column: 2;}
-    .sidebar:nth-of-type(5) {grid-row: 3; grid-column: 1;}
-    .image:nth-of-type(6) {grid-row: 3; grid-column: 2;}
-    .sidebar:nth-of-type(7) {grid-row: 4; grid-column: 1;}
-    .image:nth-of-type(8) {grid-row: 4; grid-column: 2;}
-    .sidebar:nth-of-type(9) {grid-row: 5; grid-column: 1;}
-    .image:nth-of-type(10) {grid-row: 5; grid-column: 2;}
-    .sidebar:nth-of-type(11) {grid-row: 6; grid-column: 1;}
-    .image:nth-of-type(12) {grid-row: 6; grid-column: 2;}
+    .sidebar:nth-of-type(1) {
+        grid-row: 1;
+        grid-column: 1;
+    }
 
-    .hover:hover {box-shadow: 0 0 15px #777;}
+    .image:nth-of-type(2) {
+        grid-row: 1;
+        grid-column: 2;
+    }
+
+    .sidebar:nth-of-type(3) {
+        grid-row: 2;
+        grid-column: 1;
+    }
+
+    .image:nth-of-type(4) {
+        grid-row: 2;
+        grid-column: 2;
+    }
+
+    .sidebar:nth-of-type(5) {
+        grid-row: 3;
+        grid-column: 1;
+    }
+
+    .image:nth-of-type(6) {
+        grid-row: 3;
+        grid-column: 2;
+    }
+
+    .sidebar:nth-of-type(7) {
+        grid-row: 4;
+        grid-column: 1;
+    }
+
+    .image:nth-of-type(8) {
+        grid-row: 4;
+        grid-column: 2;
+    }
+
+    .sidebar:nth-of-type(9) {
+        grid-row: 5;
+        grid-column: 1;
+    }
+
+    .image:nth-of-type(10) {
+        grid-row: 5;
+        grid-column: 2;
+    }
+
+    .sidebar:nth-of-type(11) {
+        grid-row: 6;
+        grid-column: 1;
+    }
+
+    .image:nth-of-type(12) {
+        grid-row: 6;
+        grid-column: 2;
+    }
+
+    .hover:hover {
+        box-shadow: 0 0 15px #777;
+    }
 
 
     /* Index only css (hero) */
