--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -44,7 +44,7 @@
 
 
     /* Discover only css */
-    .discover {
+    #discover {
         margin: 0 auto;
         padding: 1rem;
         display: grid;
@@ -149,6 +149,46 @@
 
     .hero span {
         font-size: 1.5rem;
+    }
+
+
+    /* Directory only css */
+    .directory main {
+        margin: 0 auto;
+        padding: 1rem;
+        gap: 1rem;
+        width: 90%;
+    }
+    
+    .directory .grid {
+        display: grid;
+        grid-column: 1 / -1;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 1rem;
+        margin: 0 auto;
+        max-width: 800px;
+    }
+    
+    .directory .list section {
+        display: grid;
+        grid-template-columns: 1fr;
+        align-items: center;
+        margin-top: 1rem;
+    }
+
+    .directory .list {
+        display: grid;
+        grid-column: 1 / -1;
+        margin: 0 auto;
+        width: 90%;
+        max-width: 600px;
+    }
+
+
+    .menu {
+        grid-column: 1 / -1;
+        text-align: center;
+        margin-bottom: 1rem;
     }
 
 }
