--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -158,6 +158,7 @@ h3 {
     background-color: #464f3d;
     padding: .5rem;
     margin-top: 1rem;
+    margin-bottom: 1rem;
     border-radius: 4px;
 }
 
@@ -177,7 +178,7 @@ section p {
 }
 
 
-/* Index only css-.hero, .spotlights, banner */
+/* Index only css-.hero, weather, .spotlights, banner */
 .hero {
     width: 100%;
     margin: 0;
@@ -254,7 +255,7 @@ section p {
     background-color: #f5f5f5;
     color: #000;
     font-size: .9rem;
-    padding: 1rem;
+    padding: .5rem;
     text-align: center;
     margin-bottom: 1rem;
 }
@@ -265,7 +266,7 @@ section p {
     font-size: 1rem;
     cursor: pointer;
     position: absolute;
-    top: .8rem;
+    top: .5rem;
     left: 1rem;
 }
 
@@ -403,7 +404,6 @@ section p {
     max-width: 100%;
     height: auto;
 }
-
 
 
 
